# kcis-super-intelligence

./: .gitignore  Makefile  README.md  app.py  bootstrap_local.sh  index.html  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
bench/: tasks.jsonl
kcis/: __init__.py  cli.py
kcis/adapters/: __init__.py  llm_adapter.py
kcis/benchmarks/: runner.py
kcis/core/: __init__.py  config.py  kernel.py  state.py  tokens.py
kcis/intelligence/: __init__.py  adaptive_mutation.py  adversarial_reasoning.py  build.py  synthesizer.py
kcis/memory/: __init__.py  spintronic_memory.py
kcis/physics/: __init__.py  entropy.py  quantum_field.py  reservoir.py  reversible_graph.py  tensor_compression.py  thermodynamics.py
templates/: index.html
tests/: test_benchmark.py  test_kernel.py  test_modules.py
