[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kcis"
version = "0.1.0"
description = "Ketchum's Compute Intelligence Systems: physics-inspired AI orchestration and optimization kernel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "python-dotenv>=1.0",
  "pydantic>=2.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.20.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23"
]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]

[project.scripts]
kcis = "kcis.cli:main"
kcis-bench = "kcis.benchmarks.runner:main"
kcis-web = "app:app"

[tool.setuptools.packages.find]
include = ["kcis*"]
